<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="com.example.joaquin.triviagranja.victor.EditarRespuestaActivity">

    <LinearLayout
        android:id="@+id/layoutR"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/Margenconfiguracion" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TTeditRespuesta"
            android:gravity="center"
            android:layout_weight="0.04"
            android:textSize="@dimen/TTconfiguracion"
            android:textStyle="bold|italic"
            android:fontFamily="cursive" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:fontFamily="cursive"
            android:text="@string/LBtexto"
            android:textSize="@dimen/ATTconfiguracion"
            android:layout_weight="0.04"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/attConfM"
            android:inputType="textMultiLine"
            android:id="@+id/ETtextoRespuesta"
            android:layout_weight="0.1"
            android:background="@android:color/holo_orange_light"
            android:ems="5"
            />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LBcorrecta"
            android:id="@+id/SWRespuesta"
            android:fontFamily="cursive"
            android:textSize="@dimen/ATTconfiguracion"
            android:textStyle="bold|italic"
            android:textOn="Sí"
            android:textOff="No"
            android:layout_weight="0.04"
            android:layout_marginTop="@dimen/Margenbetween" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="end" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/BTapply"
            android:id="@+id/BTapplyRespuesta"
            android:layout_weight="0.25"
            android:textAppearance="@style/applyText"
            android:textSize="@dimen/ATTconfiguracion" />

    </LinearLayout>

</RelativeLayout>
