<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joaquin.triviagranja.victor.ListaCategoriaActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_margin="@dimen/Margenconfiguracion">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:fontFamily="cursive"
            android:text="@string/TTedit"
            android:gravity="center"
            android:layout_weight="0.05"
            android:textSize="@dimen/TTconfiguracion"
            />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9" >


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:fontFamily="cursive"
                        android:text="@string/LBnuevaPass"
                        android:gravity="start"
                        android:textSize="@dimen/ATTconfiguracion"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/attConfM"
                        android:inputType="textPassword"
                        android:ems="5"
                        android:id="@+id/ETnuevaPass"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_light"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold|italic"
                        android:fontFamily="cursive"
                        android:text="@string/LBviejaPass"
                        android:gravity="start"
                        android:textSize="@dimen/ATTconfiguracion"
                        android:layout_marginTop="@dimen/Margenbetween"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/attConfM"
                        android:inputType="textPassword"
                        android:ems="5"
                        android:id="@+id/EToldPass"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_light"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:layout_marginStart="@dimen/Margenbetween" >

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/scrollViewListaCategorias"
                        android:layout_gravity="center_horizontal"
                        android:fillViewport="false">

                        <LinearLayout
                            android:id="@+id/layoutCategorias"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="end"
            android:layout_weight="0.05"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BTapply"
                android:id="@+id/BTpass"
                android:layout_weight="0.25"
                android:layout_gravity="start"
                android:textAppearance="@style/applyText"
                android:textSize="@dimen/ATTconfiguracion"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
